# Projects

./: CNAME  README.md  index.html
Calculator/: .gitignore  CMakeLists.txt
Snake_Game/: .gitignore  CMakeLists.txt
Snake_game/include/: Point.h
Snake_game/src/Point/: Point.c
WebLearn/: README.md
WebLearn/1 第一部分/1 通过创建喵咪相册应用学习HTML/: index.html
WebLearn/1 第一部分/2 通过创建咖啡店菜单学习基础CSS/: index.html
WebLearn/1 第一部分/4 通过创建注册表学习HTML表单/: index.html
WebLearn/1 第一部分/5 认证项目 调查表单/: index.html  styles.css
css/: position.css
计算器/: CMakeLists.txt
贪吃蛇/: CMakeLists.txt  makefile  贪吃蛇.sln
贪吃蛇/Bit/: Bit.h
贪吃蛇/Coordinate/: Coordinate.h  Coordinate_head.h
贪吃蛇/Snake/: Snake.vcxproj
贪吃蛇/UI/: UI_head.h
贪吃蛇/include/: DrawWindow.h
贪吃蛇/src/: main.c  proc.c  proc.h
贪吃蛇/src/DrawWindow/: DrawWindow.c
贪吃蛇/贪吃蛇/: Resource.h  贪吃蛇.cpp  贪吃蛇.rc  贪吃蛇.vcxproj  贪吃蛇.vcxproj.filters
